Test_Files/abstract_vm/Error/format1.asm
;     Format 1
;   ============
;   Error test 3

push int8(15
push int16-27)
push int32
dump
exit
